# simd_util

./: Cargo.toml  README.md
src/: dsp.rs  filter.rs  gui.rs  lib.rs  math.rs  parameter.rs  simd_util.rs  smoothing.rs  util.rs  widgets.rs
src/dsp/: graph.rs  processor.rs  sample.rs
src/filter/: one_pole.rs  svf.rs
src/gui/: util.rs  widgets.rs
