[package]

name = "simd_util"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

core_simd = { git = "https://github.com/rust-lang/portable-simd.git", optional = true }
std_float = { git = "https://github.com/rust-lang/portable-simd.git", optional = true }

[features]

default = ["std_simd"]
core_simd_crate = ["dep:core_simd", "dep:std_float"]
std_simd = []